src/test/ui/issues/issue-14092.rs
fn fn1(0: Box) {}
        //~^ ERROR wrong number of type arguments: expected 1, found 0 [E0243]

fn main() {}
